--- a/style.css
+++ b/style.css
@@ -946,6 +946,15 @@ p{
 .mention-legales{
 	padding: 5% 0 5% 0;
 }
+.underfooter p{
+	text-align: center;
+	color:#000;
+	margin-bottom: 0;
+}
+.underfooter p a{
+	text-decoration: none;
+	color:#000;
+}
 /*ebauche media quaries header*/
 
 @media screen and (max-width: 360px) {
